fixed spacing

--- a/app/static/css/dashboard.css
+++ b/app/static/css/dashboard.css
@@ -282,6 +282,7 @@ header h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .sidenav.active {
@@ -298,6 +299,7 @@ header h1 {
     width: 100%;
     opacity: 1;
     transition: opacity 0.3s;
+    justify-content: center; 
 }
 
 .sidenav a span {
@@ -319,6 +321,7 @@ header h1 {
     width: 100%;
     opacity: 1;
     transition: opacity 0.3s;
+    justify-content: center;
 }
 
 .sidenav-profile span {
@@ -339,7 +342,6 @@ header h1 {
     font-weight: bold;
     color: #fff;
     background-color: #ff6347; /* Adjust this to your desired color */
-    opacity: 0;
     transition: opacity 0.3s;
     opacity: 1;
 }
